--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy:gitee": "sh scripts/deployGitee.sh",
-    "deploy:github": "sh scripts/deployGithub.sh"
+    "gitee": "sh scripts/deployGitee.sh",
+    "github": "sh scripts/deployGithub.sh"
   },
   "eslintConfig": {
     "extends": [
